syntax = "proto3";
package api.v1;
option go_package = "github.com/outblocks/outblocks-plugin-go/gen/api/v1;apiv1";

import "google/protobuf/timestamp.proto";

message StateLockError {
    string lock_info = 1;
    string owner = 2;
    google.protobuf.Timestamp created_at = 3;
}

message LockError {
    string lock_name = 1;
    string lock_info = 2;
    string owner = 3;
    google.protobuf.Timestamp created_at = 4;
}

message ValidationError {
    string path = 1;
    string message = 2;
}